# ProvaVeloce

./: CMakeLists.txt  README.md  remote.cpp
src/: main.cpp
